# lightcv

./: CMakeLists.txt  LICENSE  README.md
cmake/: benchmark.cmake.in  enable_openmp.cmake  enable_test.cmake  googletest.cmake.in
lightcv/: CMakeLists.txt
lightcv/c/: CMakeLists.txt  gen_rectangle1.c  gen_rectangle1.cc  gen_rectangle1.h  gen_rectangle1.hpp
lightcv/cc/: CMakeLists.txt  gen_rectangle1.cc  gen_rectangle1.h  read_image.cc  read_image.h
lightcv/core/: CMakeLists.txt  basic.h  c_api.c  c_api.cc  c_api.h  c_api_cc.h  c_api_test.cc  data.cc  data.h  error.h  object.cc  object.h  object_test.cc  operator.cc  operator.h  tuple.cc  tuple.h  tuple_test.cc  var.cc  var.h
lightcv/csharp/: CMakeLists.txt  lightcv.cs  lightcv_test.cs
lightcv/lib/: CMakeLists.txt
lightcv/operators/: CMakeLists.txt  gen_rectangle1.cc  gen_rectangle1.h  gen_rectangle1_test.cc  read_image.cc  read_image.h  read_image_test.cc
lightcv/type/: CMakeLists.txt  basic.h  data.cc  data.h  error.h  object.cc  object.h  object_test.cc  operator.cc  operator.h  tuple.cc  tuple.h  tuple_perf.cc  tuple_test.cc  var.cc  var.h
tools/: CMakeLists.txt
